# resample

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  LICENSE  README.md  README.rst  azure-pipelines.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: check-style-and-types.yml  ci.yml  coverage.yml  docs.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  publish.yml  release.yml  run-tests.yml  test.yml
benchmarks/: asv.conf.json  test_bootstrap.py  test_jackknife.py  test_rcont.py  test_usp.py
benchmarks/benchmarks/: benchmarks.py
doc/: Makefile  bench_rcont.json  bootstrap.rst  changelog.rst  conf.py  empirical.rst  examples.rst  index.rst  jackknife.rst  make_raw_logo.py  permutation.rst  plot_bench.py  reference.rst  requirements.txt  resample.ipynb  tutorials.rst  update_changelog.py  utils.rst
doc/example/: tag_and_probe.ipynb
doc/logo/: resample_logo.ipynb
doc/tutorial/: confidence_intervals.ipynb  jackknife_vs_bootstrap.ipynb  leave-one-out-cross-validation.ipynb  permutation_tests.ipynb  sklearn.ipynb  usp_continuous_data.ipynb  variance_fit_parameters.ipynb
notebook/: confidence_intervals.ipynb  jackknife_vs_bootstrap.ipynb
notebooks/: confidence_intervals.ipynb  jackknife_vs_bootstrap.ipynb  permutation_tests.ipynb  sklearn.ipynb  usp_continuous_data.ipynb  variance_fit_parameters.ipynb
resample/: __init__.py  bootstrap.py  coverage.xml  empirical.py  jackknife.py  permutation.py  utils.py  version.py
resample/tests/: bootstrap_test.py  permutation_test.py  test_bootstrap.py  test_confidence_interval.py  test_empirical.py  test_jackknife.py  test_permutation.py  test_utils.py  test_version.py  utils_test.py
src/: rcond2.c  rcont.c  rcont.h
src/resample/: __init__.py  _deprecated.py  _ext.c  _ext.pyx  _ext.pyxbld  _util.py  bootstrap.py  empirical.py  jackknife.py  permutation.py
src/resample/tests/: test_bootstrap.py  test_jackknife.py  test_utils.py
tests/: test_bootstrap.py  test_empirical.py  test_jackknife.py  test_permutation.py  test_rcont.py  test_usp.py  test_util.py  test_version.py
