[build-system]
requires = [
    "setuptools >= 42",
    "setuptools_scm[toml] >= 3.4",
    # numpy 1.19 is first to support C-API for random
    # use oldest numpy for given Python version to ensure compatible Numpy C-API
    "numpy == 1.19; python_version == '3.7'",
    "numpy == 1.19; python_version == '3.8'",
    "numpy == 1.20; python_version == '3.9'",
    "numpy == 1.21.2; python_version == '3.10'",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/resample/_version.py"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
strict = true
no_implicit_optional = false
allow_redefinition = true
ignore_missing_imports = true
show_error_codes = true
files = "src/resample/*.py"

[tool.pytest.ini_options]
addopts = "--doctest-modules --strict-config --strict-markers -q -ra --ff"
testpaths = ["src/resample", "tests"]
log_cli_level = "INFO"
xfail_strict = true
filterwarnings = [
    "error::DeprecationWarning",
    "error::numpy.VisibleDeprecationWarning",
]
