[metadata]
name = resample
version = attr: resample.__version__
author = Daniel Saxton and Hans Dembinski
description = Randomisation-based inference in Python
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://github.com/resample-project/resample
project_urls =
    Bug Tracker = https://github.com/resample-project/resample/issues
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = resample
python_requires = >=3.7
install_requires =
    numpy >= 1.19
    scipy >= 1.5

[options.extras_require]
test =
    pytest
    pytest-cov
    numba

[tool:pytest]
testpaths =
    src/resample
    tests
addopts = --doctest-modules

[mypy]
files = src/resample/*.py
ignore_missing_imports = True
allow_redefinition = True

[flake8]
max_line_length = 88
ignore = E203 W503
exclude = setup.py

[pydocstyle]
convention = numpy

[coverage:run]
source = src/resample
relative_files = True
